fix: connectivity badge z-index issue (#309)

--- a/src/containers/AppView/styles.scss
+++ b/src/containers/AppView/styles.scss
@@ -31,3 +31,7 @@ input {
 :global .ContactDetails_section .ContactDetails_content {
   width: 75%;
 }
+
+:global .ConnectivityBadge_root {
+  z-index: 11!important;
+}
